--- a/config/offical/rpi4_32bit.config
+++ b/config/offical/rpi4_32bit.config
@@ -2516,7 +2516,6 @@ CONFIG_PACKAGE_kmod-smi-bcm2835=m
 CONFIG_PACKAGE_kmod-smi-bcm2835-dev=m
 CONFIG_PACKAGE_kmod-softdog=m
 CONFIG_PACKAGE_kmod-ssb=m
-CONFIG_PACKAGE_kmod-thermal=m
 CONFIG_PACKAGE_kmod-tpm=m
 CONFIG_PACKAGE_kmod-tpm-i2c-atmel=m
 CONFIG_PACKAGE_kmod-tpm-i2c-infineon=m
@@ -2812,9 +2811,7 @@ CONFIG_ATH_USER_REGD=y
 # CONFIG_PACKAGE_ATH_DEBUG is not set
 CONFIG_PACKAGE_ATH_DFS=y
 # CONFIG_PACKAGE_ATH_DYNACK is not set
-CONFIG_PACKAGE_kmod-ath10k=m
-CONFIG_ATH10K_LEDS=y
-CONFIG_ATH10K_THERMAL=y
+# CONFIG_PACKAGE_kmod-ath10k is not set
 CONFIG_PACKAGE_kmod-ath10k-ct=m
 CONFIG_ATH10K-CT_LEDS=y
 CONFIG_PACKAGE_kmod-ath10k-ct-smallbuffers=m
@@ -4229,8 +4226,8 @@ CONFIG_PACKAGE_libnettle=y
 # CONFIG_PACKAGE_libnftnl is not set
 CONFIG_PACKAGE_libnghttp2=y
 # CONFIG_PACKAGE_libnl is not set
-# CONFIG_PACKAGE_libnl-core is not set
-# CONFIG_PACKAGE_libnl-genl is not set
+CONFIG_PACKAGE_libnl-core=m
+CONFIG_PACKAGE_libnl-genl=m
 # CONFIG_PACKAGE_libnl-nf is not set
 # CONFIG_PACKAGE_libnl-route is not set
 CONFIG_PACKAGE_libnl-tiny=y
@@ -4254,7 +4251,15 @@ CONFIG_PACKAGE_libogg=y
 # CONFIG_PACKAGE_libpagekite is not set
 CONFIG_PACKAGE_libpam=y
 # CONFIG_PACKAGE_libpbc is not set
-# CONFIG_PACKAGE_libpcap is not set
+CONFIG_PACKAGE_libpcap=m
+
+#
+# Configuration
+#
+# CONFIG_PCAP_HAS_USB is not set
+# CONFIG_PCAP_HAS_NETFILTER is not set
+# end of Configuration
+
 # CONFIG_PACKAGE_libpci is not set
 # CONFIG_PACKAGE_libpciaccess is not set
 CONFIG_PACKAGE_libpcre=y
@@ -5995,7 +6000,20 @@ CONFIG_PACKAGE_uhttpd-mod-ubus=y
 #
 # Wireless
 #
-# CONFIG_PACKAGE_aircrack-ng is not set
+CONFIG_PACKAGE_aircrack-ng=m
+
+#
+# SSL support
+#
+CONFIG_AIRCRACK_NG_OPENSSL=y
+# CONFIG_AIRCRACK_NG_GCRYPT is not set
+# CONFIG_AIRCRACK_NG_OPTIMIZE_SPEED is not set
+
+#
+# Miscellaneous
+#
+# CONFIG_AIRCRACK_NG_HWLOC is not set
+# CONFIG_AIRCRACK_NG_SQLITE3 is not set
 # CONFIG_PACKAGE_airmon-ng is not set
 # CONFIG_PACKAGE_dynapoint is not set
 # CONFIG_PACKAGE_hcxdumptool is not set
